206
Since 2.7.2 this says:
{code}
scala>     implicit def foo[T]: T = null
<console>:4: error: diverging implicit expansion for type (Null(null)) => T
starting with method foo in object $$iw
           implicit def foo[T]: T = null
                                    ^
{code}
Actually it says that in 2.7.1 too, but then proceeds to apparently go into an infinite loop.  Either way, I am closing as fixed.
